--- a/conf/sample2.conf
+++ b/conf/sample2.conf
@@ -19,7 +19,7 @@ filter {
 output {
 	elasticsearch {
 		hosts => "localhost"
-		index => "triagfina1"
+		index => "triaglatest1"
 		document_type => "triag"
 	}
 	stdout {}
