--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --hot",
-    "start": "webpack -p && cd server && node ./server.js",
+    "start": "cd server && node ./server.js",
+    "build": "webpack",
     "test": "mocha **/*.test.js"
   },
   "author": "",
@@ -22,6 +23,9 @@
     "express": "^4.16.3",
     "mocha": "^3.5.3",
     "mongodb": "^3.0.5",
+    "mongoose": "^5.2.9",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0",
     "react": "^16.1.1",
     "react-date-picker": "^6.10.1",
     "react-dom": "^16.1.1",
