--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.3",
     "mongodb": "^3.0.5",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0",
     "react-router-dom": "^4.2.2",
     "superagent": "^3.8.2"
   }
